# git-rsl

./: .gitignore  .travis.yml  1  2  3  Cargo.toml  Jenkinsfile  LICENSE-APACHE.md  LICENSE-MIT.md  NONCE_BAG  README.md  install.sh
fixtures/: fixture.NONCE  fixture.gitconfig  test.txt  test.txt.asc  test.txt.sig
fixtures/fixture.git/: COMMIT_EDITMSG  HEAD  ORIG_HEAD  packed-refs
fixtures/fixture.git/info/: refs
fixtures/fixture.git/logs/: HEAD
fixtures/fixture.git/logs/refs/heads/: RSL
fixtures/fixture.git/objects/info/: packs
fixtures/fixture.git/objects/pack/: pack-9d2b7eb37d80c728d83dfa404f877af96cb8a30e.idx  pack-9d2b7eb37d80c728d83dfa404f877af96cb8a30e.pack
fixtures/fixture.git/refs/heads/: RSL
fixtures/fixture.gnupghome/: pubring.kbx  pubring.kbx~  trustdb.gpg
fixtures/fixture.gnupghome/openpgp-revocs.d/: F55E6A7300DED1A521EBFD5E9923A7610A361BB1.rev
fixtures/fixture.gnupghome/private-keys-v1.d/: 032A225028AC411D91A80A397D521E273EC41B18.key  C88E52948B55196E42DB03310D73EA4F6BFF0D3E.key
src/: errors.rs  fetch.rs  lib.rs  main.rs  nonce.rs  nonce_bag.rs  push.rs  push_entry.rs  rsl.rs
src/common/: mod.rs  nonce.rs  nonce_bag.rs  push_entry.rs  rsl.rs
src/utils/: git.rs  gpg.rs  mod.rs  test_helper.rs
tests/: integration_test.rs  property_tests.rs
tests/utils/: attack.rs  git.rs  mod.rs  model.rs  rsl.rs
