[package]
name = "git-rsl"
version = "0.1.0"
authors = ["Gabriella Chronis <gchronis@polysync.io>",
           "Jeff Weiss <jeffweiss@polysync.io>",
           "Katie Cleary <kcleary@polysync.io>",
           "Zachary Pierce <zacharypierce@gmail.com>"]

[dependencies]
clap = "2"
#git2 = "~0.7.1"
git2 = { git = "https://github.com/alexcrichton/git2-rs", branch = "master" }

#libgit2-sys = "~0.7.1"
gpgme = "0.6"
lazy_static = "1.0"
rand = "0.3"
regex = "0.2"
rust-crypto = "0.2"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
fs_extra = "1.0.0"
error-chain = "0.12.0"
tempdir = "0.3.6"
tempfile = "2"
hex = "0.3.1"
clippy = { version = "*", optional = true }

[dev-dependencies]
lazy_static = "1.0"
proptest = "0.3.3"
names = "0.10.0"

[lib]
name = "git_rsl"
path = "src/lib.rs"

[[bin]]
name = "git-secure-fetch"
path = "src/bin/git-secure-fetch.rs"

[[bin]]
name = "git-secure-push"
path = "src/bin/git-secure-push.rs"

[[bin]]
name = "git-rsl-init"
path = "src/bin/git-rsl-init.rs"

